--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="Esthétique"
+            content="Esthétique'21"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>Esthétique</title>
-    <meta name="title" content="Esthétique">
+    <meta name="title" content="Esthétique'21">
     <meta name="description"
           content="FOSS NSBM is a platform for Sri Lankans to organise themselves around the global Free and Open Source Software movement.">
 
